# SR-App

./: .gitignore  AGENTS.md  APP_STORE_SUBMISSION.md  CHANGELOG.md  LICENSE  Makefile  NOTARIZATION.md  README.md  improvements.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: continuous-release.yml  release.yml  visual-tests.yml
SRRadio/: README.md  SRRadio.dmg  SRRadio.entitlements
SRRadio/Resources/: Info-iOS.plist  Info.plist  LaunchScreen.storyboard
SRRadio/Resources/de.lproj/: Localizable.strings
SRRadio/Resources/en.lproj/: Localizable.strings
SRRadio/SRRadio.xcodeproj/: project.pbxproj
SRRadio/SRRadioLiveActivity/: Info.plist  SRRadioLiveActivity.swift  SRRadioLiveActivityBundle.swift
SRRadio/ScreenshotUITests/: ScreenshotGenerationTests.swift  ScreenshotUITests.swift
SRRadio/Sources/: PlayerViewModel.swift
SRRadio/Tests/: AnalyticsTests.swift  AudioPlayerTests.swift  ColorHexTests.swift  ContainerTests.swift  NowPlayingServiceTests.swift  PlayerStateTests.swift  PlayerViewModelTests.swift  RadioErrorTests.swift  SRRadioTests.swift  ServiceProtocolsTests.swift  StationTests.swift  XCTestManifests.swift
scripts/: add_files_to_project.py  capture_screenshots.sh  cleanup_pbxproj.py  inspect_pbxproj.py  notarize.sh  remove_live_activity.py  remove_target.py  test-ci.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  RadioPlayer.tsx
src/data/: stations.ts
src/services/: nowPlaying.ts
test/: AboutDialog.test.tsx  App.test.tsx  RadioPlayer.test.tsx  nowPlaying.test.ts  setup.ts  stations.test.ts
test-visual/: README.md  about-screen.spec.ts  compact-mode.spec.ts  main-screen.spec.ts
(+41 files in other folders)
