[package]
name = "sr2"
version = "0.3.2"
description = "SR2 Kultur Radio Player"
authors = ["Andreas Jung <info@zopyx.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sr2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sr2"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.112", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
